<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ryanstewartalex.pw.morningprayerrevisited.MainActivity"
    android:orientation="vertical"
    android:gravity="center|top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Morning Prayer Creator"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clergy_prompt_text"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:textSize="15sp"/>

        <RadioGroup android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clergy_first"
                android:layout_marginRight="5dp"
                android:id="@+id/clergy1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clergy_second"
                android:id="@+id/clergy2"/>
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading_prompt_text"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:textSize="15sp"/>

        <RadioGroup android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading_first"
                android:layout_marginRight="5dp"
                android:id="@+id/reading1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading_second"
                android:id="@+id/reading2"/>
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/collect_prompt_text"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/collect_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="200dp"
            android:minWidth="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson_prompt_text"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingBottom="5dp"
            android:textSize="15sp"/>

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/lesson_second"
                android:id="@+id/lesson2"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_first"
                android:layout_marginRight="5dp"
                android:id="@+id/lesson1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_third"
                android:id="@+id/lesson3"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="Generate"
        android:textSize="30sp"
        android:id="@+id/generate_button"
        android:onClick="generateTextButtonDown"/>

</LinearLayout>